css/plann3dStyles.css
/*
 * File: plann3dStyles.css
 * Authors: Patrick Ferguson and Tom Frauenfelder.
 * Created: 15/09/2015
 * Copyright: ©2015 Plann3d Pty Ltd
 * Purpose: Styling for all plann3d site elements.
 */

#pointsJS {
    position: absolute;
    display: inline-block;
    top: 0;
    left: 0;
    width: 100%;
    max-width: 100%;
}

/* Mobile breakpoints */
@media (max-width: 767px) {
    .hidden-xs {
        display: none !important;
    }
}

.plann3dtitle {
    font-family: 'Roboto', sans-serif;
    font-weight: 300; /* Light */
    font-size: 18px;
    color: #FFFFFF;
    letter-spacing: 1.54px;
    line-height: 24px;
}

.headerlinks {
    font-family: 'Raleway', sans-serif;
    font-weight: 600; /* Semi-Bold */
    font-size: 14px;
    color: #FFFFFF;
    letter-spacing: 2.2px;
    line-height: 16px;
}

h1 {
    font-family: 'Raleway', sans-serif;
    font-weight: 600; /* Semi-Bold */
    font-size: 36px;
    color: #0E1125;
    letter-spacing: 2.2px;
    line-height: 42px;
}

h2 {
    font-family: 'Raleway', sans-serif;
    font-weight: 500; /* Medium */
    font-size: 20px;
    color: #0E1125;
    letter-spacing: 1.2px;
    line-height: 24px;
}

h3 {
    font-family: 'Raleway', sans-serif;
    font-weight: 500; /* Medium */
    font-size: 14px;
    color: #0E1125;
    letter-spacing: 0.85px;
    line-height: 16px;
}

p{
    font-family: 'Raleway', sans-serif;
    font-weight: 300; /* Light */
    font-size: 10px;
    color: #000000;
    letter-spacing: 0.6px;
    line-height: 11px;
}

.buttontext {
    font-family: 'Raleway', sans-serif;
    font-weight: 600; /* Semi-Bold */
    font-size: 14px;
    color: #FFFFFF;
    letter-spacing: 1.4px;
    line-height: 16px;
}

.ghostedtext {
    font-family: 'Raleway', sans-serif;
    font-weight: 300; /* Light */
    font-size: 14px;
    color: #A4A4A4;
    letter-spacing: 0.77px;
    line-height: 16px;
}

.button {
    background: #184B72;
}

.formfield {
    background: #EDEDED;
    box-shadow: inset 0 1px 5px 1px rgba(0,0,0,0.30);
}

.featuremask {
    border: 6px solid #184B72;
}

